Minor auto-refactor code cleanup on a massive scale (#893)
* Minor auto-refactor code cleanup on a massive scale

* More cleanup